# 2dMeshGen

./: A.1.ele  A.1.node  CMakeCache.txt  CMakeLists.txt  Delaunay.hpp  Instructions.txt  Makefile  Multi copy.cpp  README.md  a.out  cmake_install.cmake  example.cpp  input.txt  inputFunction.cpp  metis_example.cpp  outputFunction.cpp  sample_mpi  sample_mpi.cpp
dt/: delaunay.cpp  triangle.cpp
include/: delaunay.h  numeric.h  triangle.h  vector2.h
input/: A.1.ele  A.1.node  A2.1.ele  A2.1.node
src/: a.out  example.cpp  inputFunction.cpp  outputFunction.cpp  parallelAlgo.cpp
